--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -31,6 +31,7 @@
 
 <!-- Script libraries -->
 <script src="js/libs/jquery/jquery-3.1.0.min.js"></script>
+<script src="js/libs/bootstrap/bootstrap.min.js"></script>
 <script src="js/libs/angular/angular.min.js"></script>
 <script src="js/libs/angular/angular-route.min.js"></script>
 <script src="js/libs/angular-translate/angular-translate.min.js"></script>
