--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -43,6 +43,7 @@
 <script src="js/libs/bootstrap/bootstrap-notify-3.1.3.min.js"></script>
 <script src="js/libs/filesaver.min.js"></script>
 <script src="js/libs/angular/ngProgress-1.1.2.min.js"></script>
+<script src="js/libs/smart-table/smart-table.min.js"></script>
 
 <!--Application scripts-->
 <script src="js/app.js?version=0.4.18"></script>
