added occasional info next to occasional selector

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -37,6 +37,7 @@
 <script src="js/libs/bootstrap/bootstrap-3.3.7.min.js"></script>
 <script src="js/libs/angular/angular-1.4.7.min.js"></script>
 <script src="js/libs/angular/angular-route-1.4.7.min.js"></script>
+<script src="js/libs/angular/angular-sanitize.min.js"></script>
 <script src="js/libs/angular-translate/angular-translate-2.11.0.min.js"></script>
 <script src="js/libs/angular-translate/angular-translate-loader-static-files-2.11.0.min.js"></script>
 <script src="js/libs/angular/angular-animate-1.4.7.min.js"></script>
